# rust-allocator

./: Cargo.toml
src/: allocator.rs  bump.rs  dynamic.rs  global_allocator.rs  main.rs  memory.rs  simple.rs
src/tests/: heap_allocation.rs  mod.rs
